# powerplatform-dataverse-client

./: .gitignore  Cargo.toml  README.md
doc/: authentication.md  batch.md  client-credentials-auth.md  device-code-auth.md  entity-types.md  fetchxml.md  logging.md  metadata-types.md  metadata.md  request-parameters.md  service-client.md  token-cache.md  token-refresh.md
integration-tests/: .gitignore  Cargo.toml  secrets.example.json
integration-tests/src/: config.rs
integration-tests/tests/: integration.rs
samples/hello-dataverse/: Cargo.toml  README.md  secrets.example.json
samples/hello-dataverse/src/: config.rs  main.rs
samples/hello-dataverse/src/scenarios/: fetchxml.rs  metadata.rs  mod.rs  refresh_demo.rs
samples/sample_suite/: Cargo.toml  secrets.example.json
samples/sample_suite/src/: config.rs  main.rs
samples/sample_suite/src/scenarios/: fetchxml.rs  metadata.rs  mod.rs
samples/v1-features/: .gitignore  Cargo.toml  README.md  secrets.example.json
samples/v1-features/src/: config.rs  main.rs
samples/v1-features/src/scenarios/: batch.rs  client_credentials_auth.rs  crud.rs  data_types.rs  device_code_auth.rs  device_code_progress.rs  fetchxml.rs  metadata.rs  mod.rs  refresh_demo.rs  request_parameters.rs
src/: lib.rs  log.rs
src/auth/: config.rs  connectionstring.rs  credentials.rs  devicecode.rs  mod.rs  token.rs
src/dataverse/: batch.rs  entity.rs  entityattribute.rs  entitydefinition.rs  entityrelationship.rs  fetchxml.rs  mod.rs  parse.rs  queryengine.rs  requestparameters.rs  servicecilent.rs  serviceclient.rs  writeoptions.rs
