[package]
name = "powerplatform-dataverse-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
