[package]
name = "powerplatform-dataverse-client"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust sdk for the Microsoft Dataverse (Power Platform) Web API."
license = "MIT"
license-file = "LICENSE"
homepage = "https://github.com/johnyenter-briars/powerplatform-dataverse-client"
repository = "https://github.com/johnyenter-briars/powerplatform-dataverse-client"
readme = "README.md"
keywords = ["dataverse", "api", "power platform", "microsoft"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
