[package]
name = "powerplatform-dataverse-client"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust sdk for the Microsoft Dataverse (Power Platform) Web API."
license = "MIT"
homepage = "https://github.com/johnyenter-briars/powerplatform-dataverse-client"
repository = "https://github.com/johnyenter-briars/powerplatform-dataverse-client"
readme = "README.md"
keywords = ["dataverse", "api", "powerplatform", "microsoft"]
categories = ["api-bindings"]

[dependencies]
base64 = "0.22"
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["time"] }
urlencoding = "2.1"
log = "0.4"
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
