[package]
name = "powerplatform-dataverse-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
powerplatform-dataverse-client = { path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }