[package]
name = "v1-features"
version = "0.1.0"
edition = "2024"

[dependencies]
powerplatform-dataverse-client = { path = "../.." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
